<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/Jet"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        android:gravity="right|bottom"
        android:textSize="50dp"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/roundstyle"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnAC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_margin="2dp"
            android:onClick="onClear"
            android:text="@string/ac"/>
        <Button
            android:id="@+id/btnDel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDelete"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/del" />
        <Button
            android:id="@+id/btnPercet"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:onClick="onOperator"
            android:text="@string/Modulo" />
        <Button
            android:id="@+id/btnDiv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:onClick="onOperator"
            android:text="@string/Divide" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/_7" />
        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:onClick="onDigit"
            android:text="@string/_8" />
        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:onClick="onDigit"
            android:text="@string/_9" />
        <Button
            android:id="@+id/btnMul"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:onClick="onOperator"
            android:text="@string/Multiplication" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/_4" />
        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:onClick="onDigit"
            android:text="@string/_5" />
        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:onClick="onDigit"
            android:text="@string/_6" />
        <Button
            android:id="@+id/btnSubstraction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:onClick="onOperator"
            android:text="@string/Substraction" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/_1" />
        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:onClick="onDigit"
            android:text="@string/_2" />
        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:onClick="onDigit"
            android:text="@string/_3" />
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:onClick="onOperator"
            android:text="@string/Add" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDecimalPoint"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/Dot" />
        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:onClick="onDigit"
            android:text="@string/_0" />
        <Button
            android:id="@+id/btn000"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:onClick="onDigit"
            android:text="@string/_000" />
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/Orange"
            android:onClick="onEqual"
            android:text="@string/Equal" />

    </LinearLayout>

</LinearLayout>